# wadconvert

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  conanfile.txt  readme.md
src/: main.cpp  wad.cpp  wad.hpp
